--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-VITE_API_PELICULAS=https://69153a6384e8bd126af9262c.mockapi.io/peliculas
-VITE_API_USERS=https://69153a6384e8bd126af9262c.mockapi.io/users
+##VITE_API_PELICULAS=https://69153a6384e8bd126af9262c.mockapi.io/peliculas
+#VITE_API_USERS=https://69153a6384e8bd126af9262c.mockapi.io/users
+VITE_API_BASEURL=https://69153a6384e8bd126af9262c.mockapi.io
 
